Fix text align.

--- a/src/styles/containers/Index.less
+++ b/src/styles/containers/Index.less
@@ -39,13 +39,10 @@
   }
 }
 
-.totals {
-  margin-top: @padding * 2;
-  text-align: center;
-}
-
+.totals,
 .payments {
   margin-top: @padding * 2;
+  text-align: center;
 }
 
 .payment {
